User Jwt Login + Registration + Security SetUp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/EventManagement
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+#7 days to seconds
+auth.expiration = 604800
+#Token Secret
+auth.secret = eventsbyanasch
+auth.header = Authorization
