--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/EventManagement
 spring.datasource.username=root
 spring.datasource.password=root
-
-
 logging.level.root=debug
-spring.batch.job.enabled = false
+spring.batch.job.enabled=false
 #7 days to seconds
-auth.expiration = 604800
+auth.expiration=604800
 #Token Secret
-auth.secret = eventsbyanasch
-auth.header = Authorization
-
-
-
+auth.secret=eventsbyanasch
+auth.header=Authorization
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
@@ -23,5 +18,17 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
-# All files uploaded through the REST API will be stored in this directory
-file.upload-dir=Users/anascheriet/Pictures/upload/
+#Gmail setup
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eventorwebapp@gmail.com
+spring.mail.password=eventorwebappredux
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
