--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,15 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=Users/anascheriet/Pictures/upload/
+
+
 #Gmail setup
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=eventorwebapp@gmail.com
-spring.mail.password=eventorwebappredux
+spring.mail.password=eventorwebappredux 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
@@ -30,5 +34,3 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
