Use env vars to remove hard coded sensitive values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.batch.job.enabled=false
 #7 days to seconds
 auth.expiration=604800
 #Token Secret
-auth.secret=eventsbyanasch
+auth.secret=${AUTH_SECRET}
 auth.header=Authorization
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
@@ -19,14 +19,13 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=Users/anascheriet/Pictures/upload/
-
+file.upload-dir=${FILE_UPLOAD_DIR}
 
 #Gmail setup
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=eventorwebapp@gmail.com
-spring.mail.password=eventorwebappredux 
+spring.mail.username=${GMAIL}
+spring.mail.password=${GMAIL_PASSWORD}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
