--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/EventManagement
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 logging.level.root=debug
